# trainDronisight

./: .gitignore  CLAUDE.md  INSTRUCTION.md  README.md  THERMAL.md  TRAINING_GUIDE.md  colab_infer.ipynb  colab_instruction.md  colab_train_yolo.ipynb  pyproject.toml  windows_instruction.md
app/: README.md  __init__.py  inference_service.py  server.py
app/static/: app.js  index.html  style.css
data_prep/: balance.py  build_dataset.py  collect.py  crop_align.py  dedup.py  emit_coco.py  emit_yolo.py  grouping.py  merge_annotations.py  oversample.py  preprocess.py  profile_images.py  split.py  verify_dataset.py
inference/: backends.py  geometry.py  infer_components.py  infer_pole.py  pipeline.py  visualize.py
notebooks/: 00_data_prep.ipynb  01_train_yolo.ipynb  02_train_faster_rcnn.ipynb  03_train_rf_detr.ipynb  04_inference_pipeline.ipynb  README.md  build_notebooks.py  colab_utils.py
scripts/: build_with_retry.sh  condition_conflict_study.py  condition_ensemble_study.py
shared/: config.py  device.py  labels.py  train_args.py
tests/: test_app.py  test_backends.py  test_backends_extra.py  test_balance.py  test_build_dataset.py  test_build_notebooks.py  test_build_subset_integration.py  test_class_index_alignment.py  test_colab_utils.py  test_collect.py  test_config.py  test_crop_align.py  test_dedup.py  test_device.py  test_emit_coco.py  test_emit_yolo.py  test_eval_yolo.py  test_frcnn_dataset.py  test_frcnn_eval.py  test_frcnn_model.py  test_frcnn_train.py  test_geometry.py  test_grouping.py  test_infer_single.py  test_labels_normalize.py  test_labels_parse.py  test_labels_yolo.py  test_merge_annotations.py  test_oversample.py  test_pipeline.py  test_preprocess.py  test_profile.py  test_rfdetr_layout.py  test_rfdetr_train.py  test_split.py  test_train_args.py  test_verify.py  test_visualize.py  test_yolo_cli.py  test_yolo_weights.py
tests/fixtures/: sample.xml
tests/thermal/: test_api.py  test_colormap.py  test_data_prep.py  test_defects.py  test_detector.py  (+3 more)
thermal/: api.py  colormap.py  defects.py  detector.py  pipeline.py  preprocess.py  report.py  schema.py
train_faster_rcnn/: dataset.py  eval.py  model.py  train.py
train_rf_detr/: layout.py  train.py
train_yolo/: eval_yolo.py  train_components.py  train_pole.py  weights.py
(+9 files in other folders)
