[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "train-dronisight"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "opencv-python>=4.9",
    "numpy>=1.26",
    "pillow>=10.2",
    "scikit-learn>=1.4",
    "pandas>=2.2",
    "pyyaml>=6.0",
    "lxml>=5.1",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools]
packages = ["shared", "data_prep"]

[tool.pytest.ini_options]
testpaths = ["tests"]
