[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "train-dronisight"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "opencv-python>=4.9",
    "numpy>=1.26",
    "pillow>=10.2",
    "scikit-learn>=1.4",
    "pandas>=2.2",
    "pyyaml>=6.0",
    "lxml>=5.1",
    "tqdm>=4.66",
    "torch>=2.2",
    "torchvision>=0.17",
    "ultralytics>=8.4.60",  # yolo26{m,x} checkpoints only exist in 8.4+; 8.3.x silently degrades to yolo26n
    "rfdetr>=1.0",
    "pycocotools>=2.0.7",
    "albumentations>=1.4",
    "nbformat>=5.10",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]   # httpx powers fastapi's TestClient
app = ["fastapi>=0.110", "uvicorn[standard]>=0.27", "python-multipart>=0.0.9"]

[tool.setuptools]
packages = ["shared", "data_prep", "train_yolo", "train_faster_rcnn", "train_rf_detr", "inference", "notebooks", "app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
